--- a/main.html
+++ b/main.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <title>FizzBuzz</title>
+    <script>
+        function runFizzBuzz() {
+            for (let i = 1; i <= 20; i++) {
+                let output = "";
+                if (i % 3 === 0) output += "Fizz";
+                if (i % 5 === 0) output += "Buzz";
+                if (output === "") output = i.toString();
+                alert(output);
+            }
+        }
+    </script>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <button onclick="runFizzBuzz()">Run FizzBuzz</button>
 </body>
-
 </html>
